Tue Dec  2 16:25:53 GMT 2008  Arif E. Nugroho  <arif_endro@yahoo.com>

	* man/po4a/po/id.po: Update from Translation Project (trivial).

Tue Dec  2 14:50:12 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* man/po4a/po/id.po: New from Translation Project (thanks, Arif E.
	  Nugroho).
	* configure.ac (AC_CONFIG_FILES): Add man/id/Makefile.
	* man/Makefile.am (DIST_SUBDIRS): Add id.
	* man/id/Makefile.am: New file.
	* man/po4a/Makefile.am (POFILES): Add po/id.po.
	* man/po4a/po4a.cfg (po4a_langs): Add id.
	* man/THANKS: Credit Arif E. Nugroho with man/id as well as id.po.
	* .bzrignore: Add man/id/man1, man/id/man5, and man/id/man8.

Mon Nov 17 19:26:50 GMT 2008  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Now that we use the ISO 8601 date format rather than
	  language-specific date variants, there's no reason to call out to
	  date (using options specific to GNU date) to format the date
	  string, so just hardcode it.
	* docs/HACKING (Release process): datemark -> date.

Mon Nov 17 17:55:35 GMT 2008  Colin Watson  <cjwatson@debian.org>

	FreeBSD build fixes.

	* man/Rules.man (replace.sed): Spell out
	  $(top_builddir)/man/replace.sin in full since $< is unspecified in
	  target rules.
	* src/Makefile.am (accessdb_LDADD, catman_LDADD, globbing_LDADD,
	  lexgrog_LDADD, man_LDADD, manconv_LDADD, mandb_LDADD,
	  manpath_LDADD, whatis_LDADD, wrapper_LDADD, zsoelim_LDADD): Add
	  @LIBINTL@.
	  (apropos$(EXEEXT)): Remove target before creating symlink. Spell
	  out whatis$(EXEEXT) in full since $< is unspecified in target
	  rules.

	* src/check_mandirs.c (testmandirs): Cast time_t values to long
	  before trying to print as %ld.
	* src/descriptions.c (parse_descriptions): Rename base_name to base
	  and seen_base_name to seen_base.
	* src/descriptions_store.c (store_descriptions): Rename base_name to
	  base.
	* src/descriptions.h (parse_descriptions, store_descriptions):
	  Update prototypes.

Mon Nov 17 11:44:17 GMT 2008  Colin Watson  <cjwatson@debian.org>
